--- a/apps/build-onchain-apps/src/global.css
+++ b/apps/build-onchain-apps/src/global.css
@@ -32,6 +32,17 @@ ul {
   padding-inline-start: 0;
 }
 
+code,
+kbd,
+samp,
+pre {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono',
+    'Courier New', monospace;
+  font-feature-settings: normal;
+  font-variation-settings: normal;
+  font-size: 1em;
+}
+
 #__next {
   position: relative;
   z-index: 0;
