--- a/apps/build-onchain-apps/src/components/Header.module.css
+++ b/apps/build-onchain-apps/src/components/Header.module.css
@@ -31,7 +31,7 @@
   align-items: center;
 }
 
-@media (max-width: 519px) {
+@media (width <= 519px) {
   [data-mobile-menu-open='true'] .HeaderThemeToggleContainer {
     display: none;
   }
