--- a/apps/build-onchain-apps/src/styles/Header.module.css
+++ b/apps/build-onchain-apps/src/styles/Header.module.css
@@ -4,16 +4,16 @@
 
 .HeaderInner {
   position: fixed;
-  height: inherit;
-  top: 0;
-  left: 0;
-  right: 0;
   z-index: 2;
-  user-select: none;
+  top: 0;
+  right: 0;
+  left: 0;
+  height: inherit;
   box-shadow: 0 1px transparent;
   transition:
     background-color 180ms,
     box-shadow 180ms;
+  user-select: none;
 }
 
 /* Faster transition when the header gains background (and slower when it loses it) */
@@ -31,7 +31,7 @@
   align-items: center;
 }
 
-@media (max-width: 519px) {
+@media (width <= 519px) {
   [data-mobile-menu-open='true'] .HeaderThemeToggleContainer {
     display: none;
   }
