--- a/apps/build-onchain-apps/src/styles/Navbar.module.css
+++ b/apps/build-onchain-apps/src/styles/Navbar.module.css
@@ -3,6 +3,7 @@
   height: 100%;
   align-items: center;
   justify-content: center;
+  background-color: var(--color-background);
 }
 
 .NavigationMenuList {
