--- a/apps/build-onchain-apps/src/styles/Header.module.css
+++ b/apps/build-onchain-apps/src/styles/Header.module.css
@@ -1,5 +1,6 @@
 .HeaderRoot {
   height: var(--header-height);
+  background-color: var(--color-background);
 }
 
 .HeaderInner {
@@ -14,6 +15,7 @@
     background-color 180ms,
     box-shadow 180ms;
   user-select: none;
+  background-color: var(--color-background);
 }
 
 /* Faster transition when the header gains background (and slower when it loses it) */
