--- a/apps/build-onchain-apps/src/styles/global.css
+++ b/apps/build-onchain-apps/src/styles/global.css
@@ -2,11 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+
 :root {
   --header-height: 60px;
   --quick-nav-display: none;
   --component-highlights-item-width: calc(100vw - 100px);
   --developer-experience-code-window-background: var(--slate-12);
+  /* Palette */ 
+  --palette-bg-black: #141519;
+  /* Build Onchain Apps shared variables */ 
+  --color-background: var(--palette-bg-black);
 }
 
 *,
@@ -15,7 +20,12 @@
   box-sizing: border-box;
 }
 
+html {
+  background-color: var(--color-background);
+}
+
 body {
+  background-color: var(--color-background);
   min-width: 320px;
   margin: 0;
   color: var(--gray-12);
@@ -48,4 +58,5 @@ pre {
 #__next {
   position: relative;
   z-index: 0;
+  background-color: var(--color-background);
 }
