--- a/apps/build-onchain-apps/src/styles/global.css
+++ b/apps/build-onchain-apps/src/styles/global.css
@@ -9,7 +9,7 @@
   --developer-experience-code-window-background: var(--slate-12);
 
   /* Palette */
-  --palette-bg-black: #0A0B0D;
+  --palette-bg-black: #0a0b0d;
   --palette-bg-soft-black: #141519;
   --palette-bg-white: #fff;
 
