--- a/apps/build-onchain-apps/src/styles/global.css
+++ b/apps/build-onchain-apps/src/styles/global.css
@@ -7,6 +7,15 @@
   --quick-nav-display: none;
   --component-highlights-item-width: calc(100vw - 100px);
   --developer-experience-code-window-background: var(--slate-12);
+
+  /* Palette */
+  --palette-bg-black: #0a0b0d;
+  --palette-bg-soft-black: #141519;
+  --palette-bg-white: #fff;
+
+  /* Build Onchain Apps shared variables */
+  --boat-color-background: var(--palette-bg-black);
+  --boat-color-text: var(--palette-bg-white);
 }
 
 *,
