--- a/apps/build-onchain-apps/src/components/home/Home.module.css
+++ b/apps/build-onchain-apps/src/components/home/Home.module.css
@@ -1,5 +1,5 @@
 .HomeHeader {
-  --home-header-height: 820px;
+  --home-header-height: 795px;
 
   height: var(--home-header-height);
 }
@@ -41,7 +41,7 @@
 }
 
 .HomeHeaderWaves {
-  --home-header-waves-height: 42px;
+  --home-header-waves-height: 32px;
 
   position: relative;
   margin-top: 4px;
@@ -57,22 +57,23 @@
   animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
 }
 
-.HomeHeaderWavesParallax > use:nth-child(1) {
-  animation-delay: -2s;
-  animation-duration: 7s;
-}
-
+.HomeHeaderWavesParallax > use:nth-child(1),
 .HomeHeaderWavesParallax > use:nth-child(2) {
-  animation-delay: -3s;
-  animation-duration: 10s;
+  animation-delay: -2s;
+  animation-duration: 6s;
 }
 
 .HomeHeaderWavesParallax > use:nth-child(3) {
-  animation-delay: -4s;
-  animation-duration: 13s;
+  animation-delay: -3s;
+  animation-duration: 12s;
 }
 
 .HomeHeaderWavesParallax > use:nth-child(4) {
+  animation-delay: -4s;
+  animation-duration: 15s;
+}
+
+.HomeHeaderWavesParallax > use:nth-child(5) {
   animation-delay: -5s;
   animation-duration: 20s;
 }
