--- a/apps/build-onchain-apps/src/components/home/Home.module.css
+++ b/apps/build-onchain-apps/src/components/home/Home.module.css
@@ -37,7 +37,7 @@
 .HomeHeaderCta {
   display: flex;
   justify-content: center;
-  margin: 16px 0 52px 0;
+  margin: 16px 0 52px;
 }
 
 .HomeHeaderWaves {
