--- a/apps/build-onchain-apps/src/global.css
+++ b/apps/build-onchain-apps/src/global.css
@@ -26,9 +26,10 @@
 body {
   min-width: 320px;
   margin: 0;
-  color: var(--gray-12);
+  color: var(--boat-color-text);
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
+  background-color: var(--boat-color-background);
 }
 
 svg {
