fix: fonts with no delay (#233)

--- a/apps/build-onchain-apps/src/global.css
+++ b/apps/build-onchain-apps/src/global.css
@@ -32,6 +32,14 @@ html {
   scroll-behavior: smooth;
 }
 
+html .font-robotoMono {
+  font-family: var(--font-roboto-mono);
+}
+
+html .font-inter {
+  font-family: var(--font-inter);
+}
+
 body {
   min-width: 320px;
   margin: 0;
