--- a/apps/build-onchain-apps/src/components/CodeBlock/CodeBlock.module.css
+++ b/apps/build-onchain-apps/src/components/CodeBlock/CodeBlock.module.css
@@ -13,7 +13,7 @@
   z-index: 2;
   top: 2px;
   right: 8px;
-  color: rgb(235 235 245 / 38%);
+  color: rgb(235 235 245 / 0.38);
   font-size: 12px;
   font-weight: 500;
   transition:
