--- a/apps/build-onchain-apps/src/global.css
+++ b/apps/build-onchain-apps/src/global.css
@@ -1,3 +1,4 @@
+/* stylelint-disable custom-property-pattern -- RainbowKit does not use kebab-case */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -81,12 +82,11 @@ pre {
 }
 
 /**
- * RainbowKit colors, and styles.
- * stylelint-disable-next-line  */
+ * RainbowKit colors, and styles. */
 [data-rk] {
   --rk-blurs-modalOverlay: blur(0px);
-  --rk-fonts-body: SFRounded, ui-rounded, 'SF Pro Rounded', -apple-system, BlinkMacSystemFont,
-    'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+  --rk-fonts-body: sfrounded, ui-rounded, 'SF Pro Rounded', -apple-system, blinkmacsystemfont,
+    'Segoe UI', roboto, helvetica, arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
     'Segoe UI Symbol';
   --rk-radii-actionButton: 9999px;
   --rk-radii-connectButton: 12px;
@@ -95,52 +95,52 @@ pre {
   --rk-radii-modalMobile: 28px;
   --rk-colors-accentColor: #0e76fd;
   --rk-colors-accentColorForeground: #fff;
-  --rk-colors-actionButtonBorder: rgba(0, 0, 0, 0.04);
-  --rk-colors-actionButtonBorderMobile: rgba(0, 0, 0, 0.06);
-  --rk-colors-actionButtonSecondaryBackground: rgba(0, 0, 0, 0.06);
-  --rk-colors-closeButton: rgba(60, 66, 66, 0.8);
-  --rk-colors-closeButtonBackground: rgba(0, 0, 0, 0.06);
+  --rk-colors-actionButtonBorder: rgb(0 0 0 / 0.04);
+  --rk-colors-actionButtonBorderMobile: rgb(0 0 0 / 0.06);
+  --rk-colors-actionButtonSecondaryBackground: rgb(0 0 0 / 0.06);
+  --rk-colors-closeButton: rgb(60 66 66 / 0.8);
+  --rk-colors-closeButtonBackground: rgb(0 0 0 / 0.06);
   --rk-colors-connectButtonBackground: #fff;
   --rk-colors-connectButtonBackgroundError: #ff494a;
   --rk-colors-connectButtonInnerBackground: linear-gradient(
     0deg,
-    rgba(0, 0, 0, 0.03),
-    rgba(0, 0, 0, 0.06)
+    rgb(0 0 0 / 0.03),
+    rgb(0 0 0 / 0.06)
   );
   --rk-colors-connectButtonText: #25292e;
   --rk-colors-connectButtonTextError: #fff;
   --rk-colors-connectionIndicator: #30e000;
   --rk-colors-downloadBottomCardBackground: linear-gradient(
       126deg,
-      rgba(255, 255, 255, 0) 9.49%,
-      rgba(171, 171, 171, 0.04) 71.04%
+      rgb(255 255 255 / 0) 9.49%,
+      rgb(171 171 171 / 0.04) 71.04%
     ),
-    #ffffff;
+    #fff;
   --rk-colors-downloadTopCardBackground: linear-gradient(
       126deg,
-      rgba(171, 171, 171, 0.2) 9.49%,
-      rgba(255, 255, 255, 0) 71.04%
+      rgb(171 171 171 / 0.2) 9.49%,
+      rgb(255 255 255 / 0) 71.04%
     ),
-    #ffffff;
+    #fff;
   --rk-colors-error: #ff494a;
-  --rk-colors-generalBorder: rgba(0, 0, 0, 0.06);
-  --rk-colors-generalBorderDim: rgba(0, 0, 0, 0.03);
-  --rk-colors-menuItemBackground: rgba(60, 66, 66, 0.1);
-  --rk-colors-modalBackdrop: rgba(0, 0, 0, 0.3);
+  --rk-colors-generalBorder: rgb(0 0 0 / 0.06);
+  --rk-colors-generalBorderDim: rgb(0 0 0 / 0.03);
+  --rk-colors-menuItemBackground: rgb(60 66 66 / 0.1);
+  --rk-colors-modalBackdrop: rgb(0 0 0 / 0.3);
   --rk-colors-modalBackground: #fff;
   --rk-colors-modalBorder: transparent;
   --rk-colors-modalText: #25292e;
-  --rk-colors-modalTextDim: rgba(60, 66, 66, 0.3);
-  --rk-colors-modalTextSecondary: rgba(60, 66, 66, 0.6);
+  --rk-colors-modalTextDim: rgb(60 66 66 / 0.3);
+  --rk-colors-modalTextSecondary: rgb(60 66 66 / 0.6);
   --rk-colors-profileAction: #fff;
-  --rk-colors-profileActionHover: rgba(255, 255, 255, 0.5);
-  --rk-colors-profileForeground: rgba(60, 66, 66, 0.06);
-  --rk-colors-selectedOptionBorder: rgba(60, 66, 66, 0.1);
+  --rk-colors-profileActionHover: rgb(255 255 255 / 0.5);
+  --rk-colors-profileForeground: rgb(60 66 66 / 0.06);
+  --rk-colors-selectedOptionBorder: rgb(60 66 66 / 0.1);
   --rk-colors-standby: #ffd641;
-  --rk-shadows-connectButton: 0px 4px 12px rgba(0, 0, 0, 0.1);
-  --rk-shadows-dialog: 0px 8px 32px rgba(0, 0, 0, 0.32);
-  --rk-shadows-profileDetailsAction: 0px 2px 6px rgba(37, 41, 46, 0.04);
-  --rk-shadows-selectedOption: 0px 2px 6px rgba(0, 0, 0, 0.24);
-  --rk-shadows-selectedWallet: 0px 2px 6px rgba(0, 0, 0, 0.12);
-  --rk-shadows-walletLogo: 0px 2px 16px rgba(0, 0, 0, 0.16);
+  --rk-shadows-connectButton: 0px 4px 12px rgb(0 0 0 / 0.1);
+  --rk-shadows-dialog: 0px 8px 32px rgb(0 0 0 / 0.32);
+  --rk-shadows-profileDetailsAction: 0px 2px 6px rgb(37 41 46 / 0.04);
+  --rk-shadows-selectedOption: 0px 2px 6px rgb(0 0 0 / 0.24);
+  --rk-shadows-selectedWallet: 0px 2px 6px rgb(0 0 0 / 0.12);
+  --rk-shadows-walletLogo: 0px 2px 16px rgb(0 0 0 / 0.16);
 }
