--- a/template/src/components/code-block/CodeBlock.module.css
+++ b/template/src/components/code-block/CodeBlock.module.css
@@ -3,7 +3,7 @@
   width: 100%;
   border-radius: 8px;
   margin: 0;
-  background-color: #000;
+  background-color: #24292e;
   overflow-x: auto;
   transition: background-color 0.5s;
 }
