--- a/template/src/global.css
+++ b/template/src/global.css
@@ -43,7 +43,8 @@ html .font-inter {
 }
 
 body {
-  min-width: 320px;
+  /* A-HA FOUND YA! ψ( ` ∇ ´ )ψ */
+  /* min-width: 320px;  */
   height: 100%;
   margin: 0;
   background-color: var(--boat-color-background);
