--- a/template/src/pages/home/Home.module.css
+++ b/template/src/pages/home/Home.module.css
@@ -22,6 +22,12 @@
   line-height: 85px;
   text-align: center;
   word-wrap: break-word;
+
+  /* Expected "context" media feature range notation (media-feature-range-notation)Stylelintmedia-feature-range-notation */
+  /* stylelint-disable-next-line media-feature-range-notation */
+  @media (max-width: 768px) {
+    font-size: 64px;
+  }
 }
 
 .HomeHeaderParagraph {
@@ -32,6 +38,12 @@
   line-height: 24px;
   text-align: center;
   word-wrap: break-word;
+
+  /* stylelint-disable-next-line media-feature-range-notation */
+  @media (max-width: 768px) {
+    padding: 0 20px;
+    font-size: 18px;
+  }
 }
 
 .HomeHeaderCta {
