--- a/template/src/components/header/Header.module.css
+++ b/template/src/components/header/Header.module.css
@@ -6,6 +6,10 @@
   padding: 32px 0 0;
 }
 
+.HeaderRoot a {
+  text-decoration: none;
+}
+
 /* Faster transition when the header gains background (and slower when it loses it) */
 .HeaderRoot[data-scroll-state='scrolling-down'] .HeaderInner {
   transition-duration: 30ms, 120ms;
